@@ -33,7 +33,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <underscore.version>1.34</underscore.version>
+    <underscore.version>1.81</underscore.version>
     <junit.version>4.13.1</junit.version>
   </properties>
 
@@ -52,8 +52,8 @@
   </dependencies>
 
   <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/javadev/nazk-client</url>
+    <system>GitHub Actions</system>
+    <url>https://github.com/javadev/nazk-client/actions</url>
   </ciManagement>
 
   <issueManagement>
@@ -68,8 +68,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
@@ -122,9 +122,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19.1</version>
-        <configuration>
-            <argLine>${argLine} -Xmx4g -XX:MaxPermSize=512m</argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
@@ -137,7 +134,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.7.201606060606</version>
+        <version>0.8.13</version>
         <executions>
           <execution>
             <id>prepare-agent</id>
